# openclaw-email-triage-v1-plugin

./: README.md  plugin.toml  pyproject.toml
.github/workflows/: compat-matrix.yml
deploy/openclaw/: RUNBOOK.md  canary.toml  full.toml  rules-routing.example.yaml  shadow.toml
scripts/: backup_openclaw_runtime.py  evaluate_rollback.py  preflight_check.py  restore_openclaw_runtime.py
src/openclaw_email_triage_v1_plugin/: __init__.py  backup.py  compat.py  config.py  contracts.py  idempotency.py  inference_client.py  plugin.py  retry.py  runtime.py  telemetry.py
tests/: test_backup_restore.py  test_compat.py  test_inference_client.py  test_plugin_command.py  test_register.py
